Fixed spacing issue with glasses

--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,8 @@ header {
 }
 
 .glasses {
-  width: 30%;
+  width: 31%;
+  margin: 0;
 }
 
 h1 {
@@ -73,6 +74,11 @@ footer {
     width: 60%;
   }
 
+  .glasses {
+    width: 25%;
+    margin: 0 5em;
+  }
+
   .social {
     width: 15%;
   }
@@ -94,6 +100,11 @@ footer {
 
   .title, .email {
     width: 50%;
+  }
+
+  .glasses {
+    width: 20%;
+    margin: 0 20em;
   }
 
   .text {
